--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <br>
               University of Wisconsin Stout<BR>
               Department of Mathematics, Statistics, & Computer Science<BR>
-              311 Jarvis Hall Science Wing
+              311 Jarvis Hall Science Wing<BR>
               714 10th Ave<BR>
               Menomonie, WI 54751<BR>
               USA<BR>
