--- a/math154/exp_log.html
+++ b/math154/exp_log.html
@@ -113,7 +113,8 @@ Plt = text(r"$y=x$",(5.5,5),color='black',fontsize=20)
     </script>
     </div>
  <P>Task: prove \(\frac{d}{dx} e^x = e^x\). (hint: if \(y = e^x\) then \(x = \ln y\).)
- <P>Task: show \(\frac{d}{dx} \log_{10}x = \frac{1}{x}\frac{1}{\ln 10}\).
+ <P>Task: show \(\frac{d}{dx} \log_{10}x = \frac{1}{x}\frac{1}{\ln 10}\).<br>
+
    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#expex">Example</button>
      <div id="expex" class="collapse">
        <P>Let \(f(x) = xe^{-x}\). Find the domain of \(f\), where it is increasing and decreasing, and where it is concave up and concave down. Then sketch a graph of \(y = f(x)\).
@@ -147,6 +148,7 @@ Plt = text(r"$y=x$",(5.5,5),color='black',fontsize=20)
       <P>We call the technique logarithmic differentiation when we first take the log of an equation defining a function, exploit properties of logarithms, and then implicitly differentiate.
       <P>Example: \(y = x^x\). What does this look like? Find \(\frac{dy}{dx} \).
       <P>Example: find \(\frac{dy}{dx}\) if \(y = \left(x^2 + 1\right)^{\sin(x)}\).
+      <P>Example: find \(\frac{dy}{dx}\) if \(y = (x^2 - 1)\sin(x^3)\sqrt(1-x) \).
       </div>
 
 
