--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -30,7 +30,7 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
 
-<img src="./corn.jpg" width=400>
+<img src="./images/corn.jpg" width=400>
 
 <P>The development rate of many organisms shows an approximately linear dependence on
 temperature. Biologists measure the development of such organisms in terms of "degree-days."
