--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -89,3 +89,11 @@ Let \(x\) and \(f(x),g(x)\) be in units of inches. Assume pine wood has a unifor
   Suppose they wish to have a volume of exactly 1.5cm\(^3\) of this metal.
 Set up an integral equation that can be used to determine how big of a hole would they have to bore through the center of the hemisphere to achieve this volume?
 </div>
+
+<h2>Example 4  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
+<div id="ex4" class="collapse">
+<P width=600> Consider the region bounded by the curves \(y = 0.5 x^2 + 2, y = x^2\) and the \(y\)-axis.
+  What is the volume of the solid created by rotating this region around the line \(x=4\)?<br>
+  <img src="./images/int_ex_4_try2.png", height=300>
+</div>
