--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -44,19 +44,19 @@ You can see a running total of the accumulated degree-days for the year at the <
 
 <ol type="a">
 <li>Construct an integral to represent the total number of degree-days in \(t_1\) days. This integral
-represents a function \(F(t_1)\) that contains the parameter \(T_m\) and the function \(T(t)\) in addition
+represents a function \(F(t_1)\) that contains the parameter \(T_m\) and the temperature function \(T(t)\) in addition
 to the independent variable \(t_1\).
-<li>Assume a variety of corn requires 2500 GDD and has a threshold temperature of 50 degrees F. Calculate the total amount of time needed for development if the temperature is a constant 70 degrees F.
+<li>Assume a variety of corn requires 2500 GDD to mature and has a threshold temperature of 50 degrees F. Calculate the total amount of time needed for development if the temperature is a constant 70 degrees F.
 <li>Suppose the temperature is a constant \(T\) degrees. Calculate the corresponding development time. Sketch a plot of the development time as a function of \(T\).
-<li>Assume that corn accumulates GDD if the temperature is above 50 degrees F and this accumulation is limited by moisture stress if the tempurature rises above 86 degrees F. Thus if the temperature rises to 90 degrees F, we treat all degrees above 86 as equivalet to 86. Write a new integral describing the development of corn.
-<li>Suppose the temperature for 10 days in June is \( 60 + 15\sin 2 \pi t \), where \(t\) is measured in days. How many GDD has the corn accumulated?
+<li>Assume that corn accumulates GDD if the temperature is above 50 degrees F and this accumulation is limited by moisture stress if the tempurature rises above 86 degrees F. Thus if the temperature rises to 90 degrees F, we treat all degrees above 86 as equivalent to 86. Write a new integral describing the development of corn.
+<li>Suppose the temperature for 10 days in June is \( 60 + 10\sin 2 \pi t \), where \(t\) is measured in days. How many GDD has the corn accumulated? What if the temperature is \( 60 + 15\sin 2 \pi t \)?
 <li>The formula for the number of GDD accumulated in a day used by many is
 \begin{equation*}
 GDD = \frac{T_{max} + T_{min}}{2} - T_m.
 \end{equation*}
 In this equation if the max temperature is above 86, it is replaced with 86.  If the min temperature is below 50, we replace it with 50.
 Describe what is going on with this equation. How does your calculation in part (e) compare?
-<li>Is this related to any numerical integration formulas we have encounterd thus far? Why or why not?
+<li><del>Is this related to any numerical integration formulas we have encounterd thus far? Why or why not?</del>
 
 
 </div>
@@ -73,8 +73,8 @@ Describe what is going on with this equation. How does your calculation in part 
 <li> Draw a diagram of the scenario.
 <li> What is the restriction on the function \(r(x)\) that needs to be in place to ensure the leg is not cut into several pieces?
 <li> It is important for shipping purposes to know the weight of each individual table leg.
-Let \(x\) and \(f(x),g(x)\) be in units of inches. Assume pine wood has a uniform density of 30 lb/ft$^3$. Set up an integral that measures how much a table leg weighs when it is cut into the function
-\begin{equation*}f(x) = e^{0.01x}?\end{equation*}
+Let \(x\) and \(f(x),g(x)\) be in units of inches. Assume pine wood has a uniform density of 30 lb/ft\(^3\). Set up an integral that measures how much a table leg weighs when it is cut into the function
+\begin{equation*}f(x) = e^{0.01x}.\end{equation*} What is the shipping weight?
 <li> What about one cut into the function
 \begin{equation*}g(x) = 1 + 0.5\cos \left( \frac{2\pi x}{36} \right)?\end{equation*}
 </ol>
