--- a/math154/oct26examples.html
+++ b/math154/oct26examples.html
@@ -38,6 +38,7 @@ $(function () {
     <li>Use <a href="https://www.desmos.com/calculator">desmos</a> to graph \(f(x)\) for all six combinations of \(\theta = 1, 10\) and \(\beta = 1, 2, 5\). What do you notice about how the two parameters behave?
     <li>Show that \(f(x)\) is a probability density function.
   </ul>
+    <a href="./oct26_ex1_soln.pdf">Solution.</a>
 </div>
 
 <h2>Example 2  </h2>
@@ -45,7 +46,8 @@ $(function () {
 <div id="ex2" class="collapse">
   <P> Evaluate
     $$\int \frac{e^x}{e^{2x} + 2e^x - 8}dx.$$
-    <P>hint: consider a u-substituion.
+    <P>hint: consider a u-substituion.<br>
+      <p>  <a href="./oct26_ex2_soln.pdf">Solution.</a>
 </div>
 
 <h2>Example 3 </h2>
@@ -53,7 +55,15 @@ $(function () {
 <div id="ex3" class="collapse">
   <P> Use partial fractions to evaluate
     $$\int \frac{8-3x}{(x+1)(x^2-4x+6)}dx.$$
+    <a href="./oct26_ex3_soln.pdf">Solution.</a>
+</div>
 
+<h2>Example 3a </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3a">Example 3a</button>
+<div id="ex3a" class="collapse">
+  <P> Use partial fractions to evaluate
+    $$\int \frac{8-3x}{(x+1)(x^2-4x-5)}dx.$$
+    <a href="./oct26_ex3a_soln.pdf">Solution.</a>
 </div>
 
 <h2>Example 4 - Joule-Lenz Law </h2>
@@ -63,7 +73,8 @@ $(function () {
   $$I = I_0 \sin\left(\frac{2\pi t}{T} - \phi\right)$$
   flowing in a conductor with resistance \(R\) ohms from \(t=T_1\) to \(t=T_2\) is given <body>
     $$Q = 0.24R\int_{T_1}^{T_2} I^2 dt$$
-    joules. Find the amount of heat generated during a cycle from \(t=0\) to \(t=T\).
+    joules. Find the amount of heat generated during a cycle from \(t=0\) to \(t=T\).<br>
+    <P>  <a href="./oct26_ex4_soln.pdf">Solution.</a>
     </div>
 
     <h2>Example 5 - Radioactive decay </h2>
@@ -71,7 +82,8 @@ $(function () {
     <div id="ex5" class="collapse">
     Radioactive substances decay exponentially: The mass at time \(t\) is \(m(t)=m(0)e^{kt}\), where \(m(0)\) is the initial mass and \(k\) is a negative constant. The mean life \(M\) of an atom in the substance is
     $$M=−k\int_0^{\infty}te^{kt}dt.$$
-    For the radioactive carbon isotope, \(^{14}\)C, used in radiocarbon dating, \(k = -0.000121\). Find the mean life of a \(^{14}\)C atom.
+    For the radioactive carbon isotope, \(^{14}\)C, used in radiocarbon dating, \(k = -0.000121\). Find the mean life of a \(^{14}\)C atom.<br>
+    <P>  <a href="./oct26_ex5_soln.pdf">Solution.</a>
   </div>
 
   </body>
