--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -29,7 +29,7 @@ $(function () {
 <h2>Warmup </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warm ups</button>
   <div id="ex0" class="collapse">
-    <P>Assume $\vec{a} \neq \vec{0}$. Which of the following, if any, are true statements?
+    <P>Assume \(\vec{a} \neq \vec{0}\). Which of the following, if any, are true statements?
       <ol>
       <li>If \(\vec{a} \cdot \vec{b} = \vec{a} \cdot \vec{c}\) then \(\vec{b} = \vec{c}\).
       <li>If \(\vec{a} \times \vec{b} = \vec{a} \times \vec{c}\) then \(\vec{b} = \vec{c}\).
@@ -86,7 +86,7 @@ $(function () {
   where \(q\) is measured in coulombs, \(|\vec{B}|\) is tesla, and \(|\vec{v}|\) in meters per second. This is magnetic term of the <a href="https://en.wikipedia.org/wiki/Lorentz_force">Lorentz Force</a>.
   Suppose that a proton beam moves through a region in space where there is a uniform magnetic field \(\vec{B} = 2 \hat{z}\).
   The protons have velocity
-  $$\vec{v} = 1.5 10^5 \hat{x} + \frac{3\sqrt{3}}{2} 10^5 \hat{z}.$$
+  $$\vec{v} = 1.5 \times 10^5 \hat{x} + \frac{3\sqrt{3}}{2} \times 10^5 \hat{z}.$$
   Find the force on a proton if its charge is \(q = 1.6 10^{-19}\) C.
 
 </div>
