--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -62,7 +62,7 @@ $(function () {
 <P> Can you determine if the point \(p = (1,1,0)\) is in the triangle with corners \((2,2,0), (-1,0,0), (3,0,0)\)?
 <ol type='a'>
 <li> First find vectors \(v_1, v_2, v_3\) that point from \(p\) to each corner.
-<li> Calculate the cross products \(v_1 \times v_2\), \(v_2 \times v_3\), \(v_3 \times v_1\).
+<li> Calculate the dot or cross products \(v_1 \times v_2\), \(v_2 \times v_3\), \(v_3 \times v_1\).
 <li> Find the angles between each pair of vectors.
 <li> Calculate the winding number and determine if the point is inside the triangle.
 </ol>
