--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -29,7 +29,7 @@ $(function () {
 <h2>Warmup </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warm ups</button>
   <div id="ex0" class="collapse">
-    <P>Assume \(\vec{a} \neq \vec{0}\). Which of the following, if any, are true statements?
+    <P>Assume \(\vec{a} \neq \vec{0}\). Which of the following, if any, are true statements? If it is true, explain why. If not, can you come up with a counterexample that shows why not?
       <ol>
       <li>If \(\vec{a} \cdot \vec{b} = \vec{a} \cdot \vec{c}\) then \(\vec{b} = \vec{c}\).
       <li>If \(\vec{a} \times \vec{b} = \vec{a} \times \vec{c}\) then \(\vec{b} = \vec{c}\).
@@ -42,9 +42,12 @@ $(function () {
   <div id="ex1" class="collapse">
 <img width="200" src="./images/stanfordbunny.png"><br>
 
-<P>A somewhat common problem in computer graphics is to calculate the area of a triangle in 3D space using only its coordinates. This problem also arises in surface strain calculations in mechanics.
-  Above is an image of the famous <a href="https://en.wikipedia.org/wiki/Stanford_bunny">Stanford bunny</a>. This is a standard test case for many discrete geometry and computer graphics algorithms.
+<P>A somewhat common problem in computer graphics is to calculate the area of a triangle in 3D space using only its coordinates.
+  Above is an image of the famous <a href="https://en.wikipedia.org/wiki/Stanford_bunny">Stanford bunny</a>.
+  This is a standard test case for many discrete geometry and computer graphics algorithms.
 <br>
+<P>This problem also arises in surface strain calculations in mechanics. Below is an image of a triangulated surface of a deforming red blood cell.
+  <img height="150" src="./images/RBC_deformations.png"><br>
 
 <P>Can you use the cross product to calculate the area of the triangle with corners \((0,0,0), (1,0,1), (3,-1,2)\)?
 
@@ -62,9 +65,14 @@ $(function () {
 <P> Can you determine if the point \(p = (1,1,0)\) is in the triangle with corners \((2,2,0), (-1,0,0), (3,0,0)\)?
 <ol type='a'>
 <li> First find vectors \(v_1, v_2, v_3\) that point from \(p\) to each corner.
-<li> Calculate the dot or cross products \(v_1 \times v_2\), \(v_2 \times v_3\), \(v_3 \times v_1\).
-<li> Find the angles between each pair of vectors.
+<li> Use the dot product to find the angles between each pair of vectors.
 <li> Calculate the winding number and determine if the point is inside the triangle.
+<li>If time, try using the cross product to calculate the winding number.
+  <ol>
+    <li> Calculate the cross products \(v_1 \times v_2\), \(v_2 \times v_3\), \(v_3 \times v_1\).
+    <li> Find the angles between each pair of vectors.
+    <li> Calculate the winding numer. Is it the same as above? Why or why not?
+    </ol>
 </ol>
 </div>
 
@@ -74,7 +82,7 @@ $(function () {
   <img width="200" src="./images/methane_molecule.png"><br>
 <P> Methane, \(CH_4\), is a molecule with one carbon and four hydrogen atoms. Assume the hydrogen atoms are located at the corners of a regular tetrahedron with coordinates (0,0,0), (1,0,1), (0,1,1), and (1,1,0).
   The carbon atom is at the centroid of this tetrahedron at (1/2, 1/2, 1/2). The <i>bond angle</i> for the molecule is the angle between the line segments joining the carbon atom to two of the hydrogen atoms.
-  Show this angle is approximately 109.5\(^o\).
+  Show this angle is approximately 109.5\(^\circ\).
 
 </div>
 
@@ -87,6 +95,6 @@ $(function () {
   Suppose that a proton beam moves through a region in space where there is a uniform magnetic field \(\vec{B} = 2 \hat{z}\).
   The protons have velocity
   $$\vec{v} = 1.5 \times 10^5 \hat{x} + \frac{3\sqrt{3}}{2} \times 10^5 \hat{z}.$$
-  Find the force on a proton if its charge is \(q = 1.6 10^{-19}\) C.
+  Find the force on a proton if its charge is \(q = 1.6 \times 10^{-19}\) C.
 
 </div>
