--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -46,8 +46,11 @@ $(function () {
   Above is an image of the famous <a href="https://en.wikipedia.org/wiki/Stanford_bunny">Stanford bunny</a>.
   This is a standard test case for many discrete geometry and computer graphics algorithms.
 <br>
-<P>This problem also arises in surface strain calculations in mechanics. Below is an image of a triangulated surface of a deforming red blood cell. Small changes in the areas of the triangles are related to the stresses felt when the cell is changing shape.
-  <img height="150" src="./images/rbc_deformations.png"><br>
+<P>This problem also arises in surface strain calculations in mechanics. 
+  Below is an image of a triangulated surface of a deforming red blood cell. 
+  Small changes in the areas of the triangles are related to the stresses felt when the cell is changing shape.
+  
+  <img width="400" src="./images/rbc_deformations.png"><br>
 
 <P>Can you use the cross product to calculate the area of the triangle with corners \((0,0,0), (1,0,1), (3,-1,2)\)?
 
