--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -50,7 +50,7 @@ $(function () {
   Below is an image of a triangulated surface of a deforming red blood cell. 
   Small changes in the areas of the triangles are related to the stresses felt when the cell is changing shape.
   
-  <img width="400" src="./images/rbc_deformations.png"><br>
+  <img width="400" src="./images/rbc_deformations.PNG"><br>
 
 <P>Can you use the cross product to calculate the area of the triangle with corners \((0,0,0), (1,0,1), (3,-1,2)\)?
 
