--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -48,7 +48,7 @@ $(function () {
 <br>
 <P>This problem also arises in surface strain calculations in mechanics. 
   Below is an image of a triangulated surface of a deforming red blood cell. 
-  Small changes in the areas of the triangles are related to the stresses felt when the cell is changing shape.
+  Small changes in the areas of the triangles are related to the stresses felt when the cell is changing shape.<br>
   
   <img width="400" src="./images/rbc_deformations.PNG"><br>
 
