--- a/math154/exam4review.html
+++ b/math154/exam4review.html
@@ -92,19 +92,14 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
         <P>Sketch the graph of the curve \(r \cos \theta = 2 r \sin \theta \).
       </div>
 
-<!--  <h2>Example 7 - Koch snowflake  </h2>
+ <h2>Example 7 - Astroid  </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
   <div id="ex7" class="collapse">
   <img src="./images/Koch_snowflake.gif" width=300><br>
-  <P>The Koch snowflake is created through the following process:
-    <ol>
-      <li>Start with an equilateral triangle with each side having length 1.
-      <li>For each step in the creation replace each segment with 4 new segments of 1/3 of the previous segment's length a la the picture above.
-      <li>Repeat this step infinitely many times.
-      </ol><br>
-    <P>What is the total length of the perimeter of the Koch snowflake?
-    <P>What is its total area?
-  </div>
--->
+  <P>Find the area of the astroid with parametric equations below. (hint: exploit symmetry)
+$$x = \cos^3 t,\hspace{1cm}  y=\sin^3 t, \hspace{1cm} 0 \le t \le 2\pi$$
+<br><img src="./images/astroid.png" width="300">
+
+</div>
 </body>
 </html>
