--- a/Math123/dec11_gt.html
+++ b/Math123/dec11_gt.html
@@ -135,7 +135,7 @@ $(function () {
     <div id="ex4" class="collapse">
     <P> What is the chromatic number of the Petersen graph below.
       The chromatic number of a graph is the minimum number of colors required to color each vertex so that incident vertices do not share a color.<br>
-      <img src="./Petersen.png" width="400">
+      <img src="./petersen.png" width="400">
     </div>
 
     <h2>Example 5 - Doodling</h2>
