--- a/math154/vvf.html
+++ b/math154/vvf.html
@@ -49,7 +49,7 @@ $(function () {
 <h2>Example 2 - spacecraft </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
-  <P>A spacecraft is flying along a path described by \(\vec{r}(t) = <t^2 - t, 2 + t, -3/t>\) where \(t\) is in hours.
+  <P>A spacecraft is flying along a path described by \(\vec{r}(t) = (t^2 - t) \hat{x} + (2 + t) \hat{y} - 3/t \hat{z}\) where \(t\) is in hours.
     When \(t=3\) the engines are shut down and the ship continues to move. Where is the spacecraft two hours later?
 </div>
 
