--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
   <br><br>
 
+  <div id="cv">
+	  <h3><a href="./cv.pdf">CV</h3>
+  </div>
+	  	  
   <div id="about">
     <h3>About me</h3>
     <P>I am in the applied mathematics faculty at the University of Wisconsin Stout. Before this I held academic appointments at Cornell College and the University of Utah. I earned my PhD in Applied Mathematics from the University of California Davis in 2010 under Dr. Angela Cheer.
