--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <br><br>
 
   <div id="cv">
-	  <h3><a href="./cv.pdf">CV</h3>
+	  <h3><a href="./cv.pdf">CV</a></h3>
   </div>
 	  	  
   <div id="about">
