--- a/math250/intro_DE_slopefields.html
+++ b/math250/intro_DE_slopefields.html
@@ -29,13 +29,21 @@ $(function () {
 <h2>Warmup </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warm ups</button>
   <div id="ex0" class="collapse">
-    <P> Consider \( \frac{dy}{dt} = y^2 - 1 \).
+    <ol type='A'>
+    <li> Consider the DE \(\frac{dx}{dt} = 2t\cos(3t) \).
+      <ol> 
+        <li> What is the general solution to the DE?
+        <li> What is the particular solution if we know that \(x(0) = 1\)? 
+        <li> What is the name given to problems consisting of a differential equationa and initial condition?
+      </ol>
+    <li> Consider \( \frac{dy}{dt} = y^2 - 1 \).
       <ol>
       <li> Equilibrium solutions are constant functions, \(y = C\), such that \(\frac{dy}{dt} = 0\). What are the equilibrium solutions of the DE above?
       <li> Use dfield (<a href="./dfield.jar">dfield.jar</a>) to create a slope field for the DE.
       <li> Add a few solution curves to the figure by clicking on the graph.
       <li> What is the relationship between the solution curves and the slope field?
       </ol>
+    </ol>
  </div>
 
 <h2>Example 1 - Lake Eutrophication</h2>
