--- a/math157/calc1review.html
+++ b/math157/calc1review.html
@@ -6,7 +6,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>MATH 154</title>
+    <title>Calculus II</title>
     <script src="https://sagecell.sagemath.org/static/jquery.min.js"></script>
     <script src="https://sagecell.sagemath.org/embedded_sagecell.js"></script>
     <script>
