--- a/math250/intro_to_DE.html
+++ b/math250/intro_to_DE.html
@@ -30,7 +30,7 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warm ups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> Consider the DE \(\frac{dx}{dt} = 2t\cos(3t) \).
+    <li> Consider the DE \(\frac{dx}{dt} = t^2 \sin(3t) \).
       <ol>
         <li> What is the general solution to the DE?
         <li> What is the particular solution if we know that \(x(0) = 1\)?
