--- a/math157/calc1review.html
+++ b/math157/calc1review.html
@@ -163,8 +163,8 @@ show(p3+pti)
 </div>
 
 <h2>Blood flow</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#invtrig">Inverse trig fcns</button>
-  <div id="invtrig" class="collapse">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#bloodflow">Blood Flow</button>
+  <div id="bloodflow" class="collapse">
     <img src="./images/blood_flow.png" width=400><br><br>
     <P>The flow of blood in a blood vessel is not the same everywhere. It flows faster in the middle of the vessel and slower near the vessel walls.
       We can use Poiseuille's law to model the flow in the longitudinal direction,\(u\), as a function of the radial coordinate, \(r\). 
