--- a/math157/calc1review.html
+++ b/math157/calc1review.html
@@ -167,7 +167,7 @@ show(p3+pti)
   <div id="bloodflow" class="collapse">
     <img src="./images/blood_flow.png" width=400><br><br>
     <P>The flow of blood in a blood vessel is not the same everywhere. It flows faster in the middle of the vessel and slower near the vessel walls.
-      We can use Poiseuille's law to model the flow in the longitudinal direction,\(u\), as a function of the radial coordinate, \(r\). 
+      We can use <a href="https://en.wikipedia.org/wiki/Hagen%E2%80%93Poiseuille_equation">Poiseuille's law</a> to model the flow in the longitudinal direction,\(u\), as a function of the radial coordinate, \(r\). 
       $$u(r) = \frac{P}{4\mu L}\left( R^2 - r^2 \right)$$
       Here, \(P,\mu,L\), are related to blood pressure, viscosity and length of the vessel. \(R\) is the radius of the vessel.
       <ol type='1'>
