--- a/math250/week2.html
+++ b/math250/week2.html
@@ -56,7 +56,7 @@ $(function () {
 
 <ol type='1'>
 <li> Explain why \(N\) is called the carrying capacity. Use both mathematical and biological reasoning.
-<li> Make a slope field using dfield (<a href="./dfield.jar">dfield.jar</a>). Plot a few solutions and explain what is happening.
+<li> Make a slope field using dfield (<a href="./dfield.jar">dfield.jar</a>). Let \(k=0.1\) and \(N=10\). Plot a few solutions and explain what is happening.
 <li> Label this equation using vocabulary from the course.
 <li> Use the fact that this equation is separable and find a general solution for the DE. You can assume \( 0 < P < N\) when solving.
 <li> Let \(P(0) = P_0\) and find a particular solution.
