--- a/math157/integral_examples.html
+++ b/math157/integral_examples.html
@@ -154,5 +154,12 @@ Set up an integral equation that can be used to determine how big of a hole woul
   Set up an equation that can be used to determine this time. It will not be solvable algebraically. Use a numerical method or graph and visually estimate a time.
 </div>
 
-  </body>
-  </html>
+<h2>Example 6 - Pyramids  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
+<div id="ex6" class="collapse">
+  <img src="./pyramid.gif" width=200><br><br>
+<P> Set up and evaluate an integral that represents the volume of a square pyramid whose base has sides of length \(L\) and height \(H\).
+</div>
+
+</body>
+</html>
