--- a/math157/integral_examples.html
+++ b/math157/integral_examples.html
@@ -140,7 +140,7 @@ Set up an integral equation that can be used to determine how big of a hole woul
 <div id="ex4" class="collapse">
 <P> Consider the region bounded by the curves \(y = 0.5 x^2 + 2, y = x^2\) and the \(y\)-axis.
   What is the volume of the solid created by rotating this region around the line \(x=4\)?<br>
-  <img src="./images/int_ex_4_try2.png", height=300>
+  <img src="./images/int_ex_4_try2.PNG", height=300>
 </div>
 
 <h2>Example 5 - Rocket  </h2>
