--- a/math250/week3.html
+++ b/math250/week3.html
@@ -324,17 +324,16 @@ $$\frac{dy}{dx} = 5y - 6e^{-x},  y(0) = 1 $$
 
 </div>
 
-<!--
-<h2>Example 6 - Lake Erie </h2>
+
+<h2>Example 6 - A curious case </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-<a href="https://clevelandhistorical.org/items/show/58"><img src="./phactcuyahoga5.jpg" width=400><br>Lake Erie/Cuyahoga River on fire in 1969  </a><br>
-<P> Lake Erie has a total volume of 458 cubic kilometers. Assume the inflow/outflow rate are equal and 175 km\(^3\)/yr.
-  Suppose at \(t=0\) the pollutant concentration is 0.05% and for \(t > 0\) pollutant concentration inflow is 0.01%.
-  If we assume the lake is perfectly mixed (it is not), how long will it take until the lake has a pollutant concentration of 0.02\%?
 
+<P> Consider the IVP
+$$ \frac{dy}{dx} = e^{x-y} \hspace{2cm} y(0) = 0 $$
+<P> <b>Question</b>. Calculate the exact solution analytically, the first 10 steps of the solution using Euler's Method and the error for each step.
+Can you explain the behavior you observe?
 </div>
--->
 
 
 </body>
