--- a/math250/week3.html
+++ b/math250/week3.html
@@ -158,7 +158,7 @@ EM
 <P> Recall the drugs in the bloodstream example from week 2.
 $$\frac{dA}{dt} = -kA $$
 $$\frac{dC}{dt} = kA - mC$$
-Let \(k=0.1, m=0.05, A(0) = 1, C(0) = 0\). Modify the Euler method code below to work for a system of two differential equations and
+Let \(k=0.1 \mbox{ min}^{-1}, m=0.05 \mbox{ min}^{-1}, A(0) = 1, C(0) = 0\). Modify the Euler method code below to work for a system of two differential equations and
 approximate the amount of drug in the bloodstream when \(t=25\) using a stepsize of \(h=0.1\).<br>
 <div class="compute"><script type="text/x-sage">
 # everything following hash symbol is comment
