--- a/math250/week4.html
+++ b/math250/week4.html
@@ -37,7 +37,17 @@
       $$2x - 12y = 4$$
       $$5x + 10y = 6$$<br>
     <li> What are three row operations that can be used to rewrite augmented matrices?
-    <li>
+    <li> Which matrix below is in reduced row echelon form (RREF)?
+      $$ A = \begin{bmatrix} 1 & 0 & 0 & 4 \\
+                             1 & 1 & 0 & -1 \\
+                            0 & 0 & 0 & 0 \end{bmatrix} \hspace{1cm}
+         B = \begin{bmatrix} 1 & 0 & 0 & 4 \\
+                               0 & 1 & 0 & 10 \\
+                              0 & 0 & 1 & -1 \end{bmatrix} \hspace{1cm}
+         C = \begin{bmatrix} 1 & 0 & 1 & 1 \\
+                               1 & 1 & 0 & 0 \\
+                              0 & 0 & 1 & 2 \end{bmatrix} $$
+
     </ol>
  </div>
 
@@ -153,7 +163,7 @@
   $$\begin{bmatrix} 1 & 1 & 1 & 6\\1 & -3 & 2 & 1 \\ 3 & -1 & 4 & 5\end{bmatrix}$$
   <ol type='1'>
     <li> Rewrite this as a system of equations.
-    <li> Use row operations (Gaussian Elimination) to reduce this matrix to reduced row Echelon form (RREF).
+    <li> Use row operations (Gaussian Elimination) to reduce this matrix to reduced row echelon form (RREF).
     <li> How many solutions to the system are there?
   </ol>
 </div>
