--- a/math250/week4.html
+++ b/math250/week4.html
@@ -33,7 +33,7 @@
   <div id="ex0" class="collapse">
     <ol type='A'>
     <li> How many qualitatively different ways are there to draw two lines?
-    <li> What is the augmented matrix for the system
+    <li> What is the augmented matrix for the system below?
       $$2x - 12y = 4$$
       $$5x + 10y = 6$$<br>
     <li> What are three row operations that can be used to rewrite augmented matrices?
