--- a/math250/week4.html
+++ b/math250/week4.html
@@ -128,8 +128,8 @@
 
   <ol type='1'>
     <li>Label this DE.
-    <li>Verify that \(y(t)\) is indeed a solution to the DE.
-    <li>If \(y(0) = 1, y'(0) = y''(0) = 0\), set up a system of linear equations to find \(c_1, c_2\), and \(c_3\).
+    <li>Is \(y(t)\) a solution to the DE?
+    <li>Regardless of your answer above, if \(y(0) = 1, y'(0) = y''(0) = 0\), set up a system of linear equations to find \(c_1, c_2\), and \(c_3\).
     <li>Write this system as an augmented matrix.
     <li>Find \(c_1, c_2, c_3\).
   </ol>
