--- a/math250/week4.html
+++ b/math250/week4.html
@@ -102,9 +102,9 @@
 <div id="ex4" class="collapse">
 <img src="./kirchoff2.png" width=400><br>
   <P>The multiloop circuit shown above has two junctions and three branches carrying currents, \(I_1, I_2, I3\).
-    Kirchoff's Voltage Law says that the sum of the voltage drops around any loop must be zero.
-    The voltage drop across a resistor is given by Ohm's Law (\(V = IR\)) where \(I\) is the current and \(R\) is the resistance.
-    Kirchoff's Current Law says that the sum of the currents at any junction must be zero (direction is important).
+    <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Voltage Law</a> says that the sum of the voltage drops around any loop must be zero.
+    The voltage drop across a resistor is given by <a href="https://en.wikipedia.org/wiki/Ohm%27s_law">Ohm's Law</a> (\(V = IR\)) where \(I\) is the current and \(R\) is the resistance.
+    <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Current Law</a> says that the sum of the currents at any junction must be zero (direction is important).
     <ol type='1'>
       <li>Explain why the system below for the currents follows from Kirchoff's Laws.
         $$I_1 + I_3 - I_2 = 0$$
@@ -143,7 +143,7 @@
 <img src="./kirchoff.png" width=450><br>
 
 <P>The multiloop circuit shown above has four junctions, \(j_i\), and six branches carrying currents, \(I_i\).
-  Kirchoff's Current Law says that the sum of the currents at each junction must be zero.
+  <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Current Law</a> says that the sum of the currents at each junction must be zero.
   <ol type='1'>
     <li>Write a system of equations for \(I_1, I_2, I_3, I_4, I_5, I_6\).
     <li>Write the system as an augmented matrix.
