--- a/math250/week4.html
+++ b/math250/week4.html
@@ -44,7 +44,9 @@
                                0 & 1 & 1 & 10  \end{bmatrix} \hspace{1cm}
          C = \begin{bmatrix} 1 & 1 & 1 & 0 \\
                                0 & 1 & 0 & 0 \end{bmatrix} $$
-
+    <li> Write the augmented matrix for the system below and then reduce that to RREF. Interpret your solutions.
+      $$x - 7y + z = 3$$
+      $$2x - 14 y + 3z = 4$$
     </ol>
  </div>
 
