--- a/math250/week5.html
+++ b/math250/week5.html
@@ -128,7 +128,7 @@ $$L = \begin{bmatrix}
 <p> Consider working on a computer graphics application where you need to transform the vector \(v = \begin{bmatrix}3\\4\end{bmatrix}\).
 
 <P> Consider the matrices below.
-  $$M = \begin{bmatrix}3 & 0\\0 & 3\\\end{bmatrix} \hspace{1cm} N = \begin{bmatrix} \sin (2\pi /3)& -\cos(2\pi/3) \\ \cos(2\pi/3) & \sin(2\pi/3) \end{bmatrix} \hspace{1cm} B= \begin{bmatrix} 0 & 1\\ 1 & 0\end{bmatrix}$$
+  $$M = \begin{bmatrix}3 & 0\\0 & 3\\\end{bmatrix} \hspace{1cm} N = \begin{bmatrix} \cos (2\pi /3)& -\sin(2\pi/3) \\ \sin(2\pi/3) & \cos(2\pi/3) \end{bmatrix} \hspace{1cm} B= \begin{bmatrix} 0 & 1\\ 1 & 0\end{bmatrix}$$
 
 <ol type='1'>
  <li> What is the effect of applying \(M\) to \(v\), i.e. \(Mv\)? Calculate the product and sketch both \(v\) and \(Mv\) on the same axes.
@@ -168,6 +168,21 @@ For what values of the scalar, \(\lambda\), does the matrix \(A - \lambda I\) ha
 <h2>Example 7 -  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
 <div id="ex7" class="collapse">
+
+<P> Consider the two matrices below.
+  $$ A = \begin{bmatrix}1&2&3\\1&0&1\\3&4&7\end{bmatrix}  \hspace{1cm} B = \begin{bmatrix}2& -2& 5\\0 & 4& -2\\0 & 0 & 1\end{bmatrix}$$
+
+<ol type='1'>
+<li> Show \(x_1 = \begin{bmatrix} 1\\1\\-1 \end{bmatrix}\) and \(x_2 = \begin{bmatrix} -2\\-2 \\2 \end{bmatrix}\) solve \(Ax=0\).
+<li> Show \(c_1 x_1 + c_2 x_2 \) also solves \(Ax = 0\).
+<li> Solve the system \(A x = 0\) generally, using substitution, row operations, or technology.
+<li> What is the determinant of \(A\)?
+<li> What is the solition to \(A x = [1 1 1]^T\)?
+<li> Solve \(Bx = 0\) generally,  using substitution, row operations, or technology.
+<li> What is the determinant of \(B\)?
+<li> What is the solition to \(B x = [1 1 1]^T\)?
+<li> How do these results relate to any theorems from your reading this week?
+</ol>
  linear combination Example
 
  homogeneous equations
