--- a/math250/week5.html
+++ b/math250/week5.html
@@ -91,10 +91,10 @@
 <h2>Example 3 - Turtle populations</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
-<a href="./Crouse_etal_1987_Ecology.pdf"><img src="./loggerhead_turtle.jpg" width=300></a><br>
+<a href="./Crouse_etal_1987_ecology.pdf"><img src="./loggerhead_turtle.jpg" width=300></a><br>
 
 One way to model a population is to consider the number of individuals in certain stages of development.
-In <a href="./Crouse_etal_1987_Ecology.pdf">Crouse et al.</a> they break up the loggerhead turtle population into seven distinct stages.
+In <a href="./Crouse_etal_1987_ecology.pdf">Crouse et al.</a> they break up the loggerhead turtle population into seven distinct stages.
 They are eggs & hatchlings (together), small juveniles, large juveniles, subadults, novice breeders, 1st year remigrants, and mature breeders.
 We can then keep track of the population in year \(n\) with the vector \(x_n = [x_1, x_2, ..., x_7]^T\) where \(x_1\) are eggs & hatchlings, \(x_2\) are small juveniles, up through \(x_7\) as the mature breeders.
 
@@ -177,10 +177,10 @@ For what values of the scalar, \(\lambda\), does the matrix \(A - \lambda I\) ha
 <li> Show \(c_1 x_1 + c_2 x_2 \) also solves \(Ax = 0\).
 <li> Solve the system \(A x = 0\) generally, using substitution, row operations, or technology.
 <li> What is the determinant of \(A\)?
-<li> What is the solition to \(A x = [1 1 1]^T\)?
+<li> What is the solition to \(A x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
 <li> Solve \(Bx = 0\) generally,  using substitution, row operations, or technology.
 <li> What is the determinant of \(B\)?
-<li> What is the solition to \(B x = [1 1 1]^T\)?
+<li> What is the solition to \(B x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
 <li> How do these results relate to any theorems from your reading this week?
 </ol>
  linear combination Example
