--- a/math250/week5.html
+++ b/math250/week5.html
@@ -46,7 +46,7 @@
     <li> Calculate the determinant of
       $$A = \begin{bmatrix} 4 & 6\\ 3 & 8 \end{bmatrix} $$
     <li> Calculate the determinant of
-      $$B = \begin{bmatrix} 1& 2 & 3\\0 & -4 & 1\\  0 & 3 & -1$$
+      $$B = \begin{bmatrix} 1& 2 & 3\\0 & -4 & 1\\  0 & 3 & -1\end{bmatrix}$$
     </ol>
  </div>
 
@@ -60,7 +60,7 @@
     $$ 4 x_1 + 5x_2 = -7$$
     $$ x_1 + 2x_2 = 3$$
 <ol type='1'>
-<li> solve this system using elimination, subsitution, or Gaussian elimination of an augemented matrix.
+<li> Solve this system using elimination, subsitution, or Gaussian elimination of an augemented matrix.
 <li> Write the system in matrix-vector form. \(Ax=b\)
 <li> Calculate the inverse of \(A\).
 <li> Calculate the solution as \(x = A^{-1}b\). Does it agree with your solution above?
@@ -177,18 +177,13 @@ For what values of the scalar, \(\lambda\), does the matrix \(A - \lambda I\) ha
 <li> Show \(c_1 x_1 + c_2 x_2 \) also solves \(Ax = 0\).
 <li> Solve the system \(A x = 0\) generally, using substitution, row operations, or technology.
 <li> What is the determinant of \(A\)?
-<li> What is the solition to \(A x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
+<li> What is the solution to \(A x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
 <li> Solve \(Bx = 0\) generally,  using substitution, row operations, or technology.
 <li> What is the determinant of \(B\)?
-<li> What is the solition to \(B x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
+<li> What is the solution to \(B x = \begin{bmatrix}1& 1& 1\end{bmatrix}^T\)?
+<li> Calculate \(A^{-1}\) and \(B^{-1}\) if possible.
 <li> How do these results relate to any theorems from your reading this week?
 </ol>
- linear combination Example
-
- homogeneous equations
-
- inverse exists determinants
-
 
 </div>
 
