--- a/math250/week5.html
+++ b/math250/week5.html
@@ -42,7 +42,7 @@
 
     <li> What is the relationship between \(v\) and \( Av\), where
       $$v = \begin{bmatrix}1\\-1\end{bmatrix} \hspace{1cm} A = \begin{bmatrix}0 & 1\\-2 & -3\end{bmatrix}?$$
-    <li> What is the inverse of \( M = \begin{bmatrix} 1 & 3\\ 5 & 4 \end{bmatrix}
+    <li> What is the inverse of \( M = \begin{bmatrix} 1 & 3\\ 5 & 4 \end{bmatrix}\)?
     <li> Calculate the determinant of
       $$A = \begin{bmatrix} 4 & 6\\ 3 & 8 \end{bmatrix} $$
     <li> Calculate the determinant of
